--- a/cip/cip0002.md
+++ b/cip/cip0002.md
@@ -191,6 +191,7 @@ Specifically, it implements solutions for:
 - [x] Add test status badges to README
 - [x] Add tests for abstract base classes and neural networks
 - [x] Improve code robustness with input validation
+- [x] Add comprehensive tests for Logistic Regression and Gaussian Process methods
 - [ ] Add property-based tests
 - [ ] Create integration tests
 - [ ] Add performance benchmarks
@@ -200,14 +201,17 @@ Specifically, it implements solutions for:
 - **Testing Infrastructure**: Added pytest, pytest-cov, hypothesis, and pytest-benchmark dependencies to pyproject.toml
 - **Test Configuration**: Created tests/ directory structure with conftest.py, pytest.ini, and .coveragerc
 - **Unit Tests**: Implemented comprehensive unit tests for:
-- **Coverage Improvements**: Increased mlai.py coverage from 15% to 74% through comprehensive testing
+- **Coverage Improvements**: Increased mlai.py coverage from 15% to 86% through comprehensive testing
 - **Abstract Base Classes**: Added tests for Model, ProbModel, and MapModel NotImplementedError behavior
 - **Neural Networks**: Added comprehensive tests for SimpleNeuralNetwork, SimpleDropoutNeuralNetwork, and NonparametricDropoutNeuralNetwork
 - **Input Validation**: Added parameter validation to neural network constructors for robustness
 - **Edge Cases**: Added comprehensive tests for LM error handling, Kernel _repr_html_, and utility function edge cases
 - **Kernel Functions**: Added tests for 10+ additional kernel functions (exponentiated_quadratic, eq_cov, ou_cov, matern32_cov, matern52_cov, mlp_cov, icm_cov, slfm_cov, add_cov, prod_cov)
 - **Basis Functions**: Added edge case tests for polynomial and radial basis functions
-- **Overall Project Coverage**: Achieved 25% overall project coverage (up from 0%)
+- **Logistic Regression**: Added comprehensive tests for LR gradient, compute_g, update_g, and objective methods
+- **Gaussian Process**: Added tests for posterior_f and update_inverse functions
+- **Gaussian Noise Model**: Added tests for grad_vals method
+- **Overall Project Coverage**: Achieved 27% overall project coverage (up from 0%)
   - `gp_tutorial.py`: 100% coverage with mocked matplotlib dependencies
   - `__init__.py`: 73% coverage testing imports and GPy availability
   - `deepgp_tutorial.py`: 83% coverage with circular import fixes and NumPy compatibility improvements
