Update CIP-0006 with coverage study and test requirements
- Document coverage collection interference issue as completed
- Complete coverage study identifying 82% current coverage
- Define 5 categories of required tests before refactoring:
  * Error handling tests for critical functions
  * Advanced algorithm tests for complex features
  * Performance and memory management tests
  * Integration and compatibility tests
  * Edge case and specialized feature tests
- Set target coverage of 95%+ before refactoring
- Add detailed coverage analysis in coverage_analysis.md

--- a/cip/cip0006.md
+++ b/cip/cip0006.md
@@ -143,9 +143,21 @@ Comprehensive testing approach:
   - **Mitigation**: Careful dependency analysis and design
 - **Risk**: Performance impact
   - **Mitigation**: Benchmarking and optimisation
+- **Risk**: Coverage collection interference
+  - **Issue**: pytest-cov interferes with numpy's internal state, causing matplotlib failures
+  - **Impact**: 7 tests fail with coverage collection (visualization and Ward's method tests)
+  - **Mitigation**: Document coverage collection issue before refactoring (see Backlog: 2025-10-12_coverage-collection-numpy-interference)
 
 ## Implementation Status
-- [ ] Create CIP-0006 document
+- [x] Create CIP-0006 document
+- [x] Document coverage collection interference issue (Backlog: 2025-10-12_coverage-collection-numpy-interference)
+- [x] Complete coverage study to identify missing tests
+- [ ] Add tests for uncovered functionality before refactoring
+  - [ ] Error handling tests for critical functions
+  - [ ] Advanced algorithm tests for complex features
+  - [ ] Performance and memory management tests
+  - [ ] Integration and compatibility tests
+  - [ ] Edge case and specialized feature tests
 - [ ] Phase 1: Core Infrastructure modules
 - [ ] Phase 2: Core Algorithms modules  
 - [ ] Phase 3: Specialized Algorithms modules
@@ -153,8 +165,21 @@ Comprehensive testing approach:
 - [ ] Update documentation
 - [ ] Final testing and validation
 
+## Required Test Additions
+
+**Current Coverage**: 82% (782/958 statements)
+**Target Coverage**: 95%+ before refactoring
+
+**Required Test Categories**:
+1. **Error Handling Tests**: Critical functions and edge cases
+2. **Advanced Algorithm Tests**: Complex neural network and GP features  
+3. **Performance Tests**: Memory management and optimization algorithms
+4. **Integration Tests**: Cross-module compatibility and advanced features
+5. **Edge Case Tests**: Boundary conditions and specialized functionality
+
 ## References
 - Current `mlai.py` file: `/Users/neil/lawrennd/mlai/mlai/mlai.py`
 - Existing module structure: `/Users/neil/lawrennd/mlai/mlai/`
+- Coverage analysis: `/Users/neil/lawrennd/mlai/coverage_analysis.md`
 - Python packaging best practices
 - Modular design principles
