Update CIP-0006 with accurate missing line numbers
- Updated critical missing lines to reflect current 83% coverage (166 uncovered statements)
- Removed outdated line numbers and updated with current coverage report
- Ready to proceed with targeted test additions to reach 95%+ coverage

--- a/cip/cip0006.md
+++ b/cip/cip0006.md
@@ -176,15 +176,18 @@ Comprehensive testing approach:
 **Current Coverage**: 83% (792/958 statements) - **ACHIEVED through modular test extraction**
 **Target Coverage**: 95%+ before refactoring (additional tests may be needed)
 
-**Critical Missing Lines** (158 uncovered statements):
-- Lines 125-128, 165-167: Error handling paths
-- Lines 274-276, 377, 537: Utility function edge cases  
-- Lines 573, 578-579, 583: Model initialization edge cases
+**Critical Missing Lines** (166 uncovered statements):
+- Lines 165-167: Error handling paths
+- Lines 274-276, 283-285: Utility function edge cases  
+- Line 377: Model initialization edge case
+- Line 537: Utility function edge case
+- Lines 573, 575-579, 583: Model initialization edge cases
 - Lines 654-655, 659-660: Linear model edge cases
 - Lines 783-785, 825: Basis function edge cases
 - Lines 858-861, 863: Kernel function edge cases
 - Lines 902-907: Neural network edge cases
-- Lines 1044, 1091, 1093: Dropout network edge cases
+- Lines 963-971: Advanced neural network edge cases
+- Lines 1091, 1093: Dropout network edge cases
 - Lines 1617-1640, 1683-1684: Optimization edge cases
 - Lines 2105, 2112-2113: GP edge cases
 - Lines 2251-2252, 2278: Data generation edge cases
