Add targeted perceptron tests and update CIP-0006
- Added test_update_perceptron_positive_classification_error to cover lines 274-276
- Added test_update_perceptron_negative_classification_error to cover lines 283-285
- These tests specifically trigger the weight update paths in update_perceptron function
- Updated CIP-0006 to mark perceptron weight update paths as covered
- Reduced missing lines from 166 to 164 uncovered statements
- Part of CIP-0006: improving coverage before refactoring

--- a/cip/cip0006.md
+++ b/cip/cip0006.md
@@ -176,9 +176,9 @@ Comprehensive testing approach:
 **Current Coverage**: 83% (792/958 statements) - **ACHIEVED through modular test extraction**
 **Target Coverage**: 95%+ before refactoring (additional tests may be needed)
 
-**Critical Missing Lines** (166 uncovered statements):
+**Critical Missing Lines** (164 uncovered statements):
 - Lines 165-167: Error handling paths
-- Lines 274-276, 283-285: Utility function edge cases  
+- ~~Lines 274-276, 283-285: Perceptron weight update paths~~ ✅ **COVERED**
 - Line 377: Model initialization edge case
 - Line 537: Utility function edge case
 - Lines 573, 575-579, 583: Model initialization edge cases
