--- a/cip/cip0006.md
+++ b/cip/cip0006.md
@@ -176,10 +176,10 @@ Comprehensive testing approach:
 **Current Coverage**: 83% (792/958 statements) - **ACHIEVED through modular test extraction**
 **Target Coverage**: 95%+ before refactoring (additional tests may be needed)
 
-**Critical Missing Lines** (164 uncovered statements):
-- Lines 165-167: Error handling paths
+**Critical Missing Lines** (162 uncovered statements):
+- ~~Lines 165-167: write_figure_caption function~~ ✅ **COVERED**
 - ~~Lines 274-276, 283-285: Perceptron weight update paths~~ ✅ **COVERED**
-- Line 377: Model initialization edge case
+- ~~Line 377: ProbModel.objective() method~~ ✅ **COVERED**
 - Line 537: Utility function edge case
 - Lines 573, 575-579, 583: Model initialization edge cases
 - Lines 654-655, 659-660: Linear model edge cases
