Organize missing lines by test file in CIP-0006
- Reorganized 155 missing lines by which test file should handle them
- Clear separation of responsibilities:
  - test_models.py: Base model classes (3 lines)
  - test_linear_models.py: Linear models & basis functions (15 lines)
  - test_gaussian_processes.py: GP models (9 lines)
  - test_neural_networks.py: Neural networks (0 lines - all covered)
  - test_utils.py: Utility functions (25 lines)
  - test_experimental.py: Experimental features (2 lines)
  - test_dimred.py: Dimensionality reduction (25 lines)
- Provides clear roadmap for targeted coverage improvement by module

--- a/cip/cip0006.md
+++ b/cip/cip0006.md
@@ -176,27 +176,44 @@ Comprehensive testing approach:
 **Current Coverage**: 83% (792/958 statements) - **ACHIEVED through modular test extraction**
 **Target Coverage**: 95%+ before refactoring (additional tests may be needed)
 
-**Critical Missing Lines** (161 uncovered statements):
+**Critical Missing Lines** (155 uncovered statements) - **Organized by Test File:**
+
+## test_models.py (Base Model Classes)
 - ~~Lines 165-167: write_figure_caption function~~ ✅ **COVERED**
-- ~~Lines 274-276, 283-285: Perceptron weight update paths~~ ✅ **COVERED**
 - ~~Line 377: ProbModel.objective() method~~ ✅ **COVERED**
+- Lines 573, 575-579, 583: Model set_param edge cases (LM, BLM classes)
+
+## test_linear_models.py (Linear Models & Basis Functions)
 - ~~Line 537: LM constructor error handling~~ ✅ **COVERED**
-- Lines 573, 575-579, 583: Model initialization edge cases
-- Lines 654-655, 659-660: Linear model edge cases
-- Lines 783-785, 825: Basis function edge cases
-- Lines 858-861, 863: Kernel function edge cases
-- Lines 902-907: Neural network edge cases
-- Lines 963-971: Advanced neural network edge cases
-- Lines 1091, 1093: Dropout network edge cases
-- Lines 1617-1640, 1683-1684: Optimization edge cases
-- Lines 2105, 2112-2113: GP edge cases
-- Lines 2251-2252, 2278: Data generation edge cases
-- Lines 2295-2298, 2325-2335: Clustering edge cases
+- Lines 654-655, 659-660: Linear model objective/log_likelihood edge cases
+- Lines 783-785, 825: Basis function edge cases (radial, fourier functions)
+- Lines 858-861, 863: Basis function edge cases (hyperbolic_tangent function)
+- Lines 902-907: Basis function edge cases (relu function)
+- Lines 1091, 1093: Dropout network edge cases (NonparametricDropoutNeuralNetwork)
+- Lines 2105, 2112-2113: GP set_param edge cases
+- Lines 2295-2298, 2325-2335: LR (Logistic Regression) edge cases
+
+## test_gaussian_processes.py (Gaussian Processes)
+- Lines 963-971: GP log_likelihood edge cases
 - Lines 2431-2432, 2438, 2447-2448, 2457: GP prediction edge cases
-- Lines 2549, 2608-2609, 2670-2674: Advanced algorithm edge cases
-- Lines 2783-2786, 2801-2804: Specialized function edge cases
-- Lines 3132-3154, 3184, 3191-3192, 3196-3202, 3207-3216: Complex algorithm edge cases
-- Lines 3368-3378, 3383-3394, 3398-3405, 3410-3412, 3417-3423: Advanced feature edge cases
+- Lines 2549, 2608-2609, 2670-2674: GP optimization edge cases
+
+## test_neural_networks.py (Neural Networks)
+- ~~Lines 274-276, 283-285: Perceptron weight update paths~~ ✅ **COVERED**
+
+## test_utils.py (Utility Functions)
+- Lines 1617-1640, 1683-1684: Optimization utility functions (finite_difference_gradient, finite_difference_jacobian)
+- Lines 2251-2252, 2278: Data generation utility functions (load_pgm, generate_swiss_roll)
+- Lines 2783-2786, 2801-2804: Specialized utility functions
+- Lines 3132-3154, 3184, 3191-3192, 3196-3202, 3207-3216: Complex utility functions
+- Lines 3368-3378, 3383-3394, 3398-3405, 3410-3412, 3417-3423: Advanced utility functions (ppca, clustering)
+
+## test_experimental.py (Experimental Features)
+- Lines 1091, 1093: Dropout network edge cases (NonparametricDropoutNeuralNetwork)
+
+## test_dimred.py (Dimensionality Reduction)
+- Lines 3132-3154, 3184, 3191-3192, 3196-3202, 3207-3216: Dimensionality reduction algorithms
+- Lines 3368-3378, 3383-3394, 3398-3405, 3410-3412, 3417-3423: Clustering algorithms
 
 **Required Test Categories**:
 1. **Error Handling Tests**: Critical functions and edge cases
