Update CIP-0006 to reflect test structure reorganization
- Added completed test structure reorganization section
- Updated critical missing lines to reflect moved functions:
  - Kernel functions (add_cov, prod_kern) moved to test_gaussian_processes.py
  - Clustering functions (kmeans_assignments, kmeans_update) moved to test_dimred.py
  - Dimensionality reduction functions (ppca_*, kruskal_stress) moved to test_dimred.py
- Improved logical organization of missing lines by test file
- Maintains clear roadmap for targeted coverage improvement by module

--- a/cip/cip0006.md
+++ b/cip/cip0006.md
@@ -164,6 +164,13 @@ Comprehensive testing approach:
   - [x] Created `test_dimred.py` - Dimensionality reduction and clustering
   - [x] Maintained 83% coverage for `mlai.py` (186 tests passing, 7 failing due to matplotlib compatibility)
   - [x] Removed original `test_mlai.py` and committed modular structure
+- [x] **COMPLETED: Test Structure Reorganization** (2025-10-12)
+  - [x] Moved kernel functions (add_cov, prod_kern) from test_utils.py to test_gaussian_processes.py
+  - [x] Moved clustering functions (kmeans_assignments, kmeans_update) to test_dimred.py::TestClusteringMethods
+  - [x] Moved dimensionality reduction functions (ppca_eig, ppca_svd, ppca_posterior, kruskal_stress) to test_dimred.py::TestDimensionalityReduction
+  - [x] Renamed TestWardsMethod to TestClusteringMethods for better organization
+  - [x] Fixed numerical stability issues in PPCA tests with seeded random data
+  - [x] Improved logical separation: clustering, dimensionality reduction, and kernel functions
 - [ ] Phase 1: Core Infrastructure modules
 - [ ] Phase 2: Core Algorithms modules
 - [ ] Phase 3: Specialized Algorithms modules
@@ -202,18 +209,21 @@ Comprehensive testing approach:
 - ~~Lines 274-276, 283-285: Perceptron weight update paths~~ ✅ **COVERED**
 
 ## test_utils.py (Utility Functions)
-- Lines 1617-1640, 1683-1684: Optimization utility functions (finite_difference_gradient, finite_difference_jacobian)
-- Lines 2251-2252, 2278: Data generation utility functions (load_pgm, generate_swiss_roll)
-- Lines 2783-2786, 2801-2804: Specialized utility functions
-- Lines 3132-3154, 3184, 3191-3192, 3196-3202, 3207-3216: Complex utility functions
-- Lines 3368-3378, 3383-3394, 3398-3405, 3410-3412, 3417-3423: Advanced utility functions (ppca, clustering)
+- Lines 1617-1640, 1683-1684: Optimization utility functions (finite_difference_gradient, verify_gradient_implementation)
+- Lines 2251-2252, 2278: Data generation utility functions (load_pgm error handling, LR constructor error handling)
+- Lines 3132-3154, 3184, 3191-3192: Mathematical utility functions (radial_multivariate, dist2)
+- Lines 3417-3423: Data generation utility functions (generate_swiss_roll)
+
+## test_gaussian_processes.py (Gaussian Processes & Kernels)
+- Lines 2783-2786, 2801-2804: Kernel/covariance functions (add_cov, prod_kern) ✅ **MOVED FROM test_utils.py**
+
+## test_dimred.py (Dimensionality Reduction & Clustering)
+- Lines 3196-3202, 3207-3216: Clustering algorithms (kmeans_assignments, kmeans_update) ✅ **MOVED FROM test_utils.py**
+- Lines 3227-3236, 3242-3252, 3258-3274, 3280-3307, 3313-3331, 3337-3363: Ward's method edge cases
+- Lines 3368-3378, 3383-3394, 3398-3405, 3410-3412: Dimensionality reduction algorithms (ppca_eig, ppca_svd, ppca_posterior, kruskal_stress) ✅ **MOVED FROM test_utils.py**
 
 ## test_experimental.py (Experimental Features)
 - Lines 1091, 1093: Dropout network edge cases (NonparametricDropoutNeuralNetwork)
-
-## test_dimred.py (Dimensionality Reduction)
-- Lines 3132-3154, 3184, 3191-3192, 3196-3202, 3207-3216: Dimensionality reduction algorithms
-- Lines 3368-3378, 3383-3394, 3398-3405, 3410-3412, 3417-3423: Clustering algorithms
 
 **Required Test Categories**:
 1. **Error Handling Tests**: Critical functions and edge cases
